# KineticKebab

./: .gitignore  Cargo.toml  build.sh  build.zig  build.zig.zon  main.zig  make.sh  playground.zig  requirements.txt  setup.py  test.sh
.github/workflows/: python-package.yml
Errors/: errors.zig
KineticKebab/: __init__.py
KineticKebab/Propulsion/: rpe_9.py
KineticKebab/common/: __init__.py  geometry.py  str_format.py  units.py
KineticKebab/examples/: cold_gas_thruster.py
KineticKebab/fluids/: compressible.py  general.py
KineticKebab/global/: str_format.py  units.py
KineticKebab/propulsion/: nozzels.py  rpe_9.py
KineticKebab/test/: run_tests.sh  test_comp_fluids.py  test_propulsion.py
Physics/: Forces.zig  Motion.zig  forces.zig  motion.zig
Sim/: sim.zig
Solvers/: Solvers.zig  solvers.zig
cea_props/: create_props.py  test_accuracy.py
cea_props/configs/: combuster.json
kinetic_kebab/: abi.py  kinetic_kebab
kinetic_kebab_api/: __init__.py  abi.py  cli_api.py  kinetic_kebab
kinetic_kebab_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kinetic_kebab_api/tests/: motion1dof.json  test_build.py
src/: base_case.json  base_case.zig  c_abi.zig  example.csv  fluids_base.json  main.rs  main.zig  motion_base.json  recorder.zig  sim.zig
src/_model_tests/: fluids_base.json  motion1d_base.json  motion2d_base.json  test_blowdown.zig  test_motion_1dof.zig  test_motion_2dof.zig  test_motion_3dof.zig  test_orifice_reverse.zig  test_rooter.zig  test_steady.zig  test_transient_orifice.zig  tests.zig
src/config/: create_from_json.zig
(+64 files in other folders)
