[package]
name = "kinetickebab"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
num-traits = "0.2.17"
csv = "1.3.0"
derive_more = "0.99.17"
coolprop-rs = "0.2.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]