[package]
name = "kinetickebab"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
csv = "1.3.0"
derive_more = "0.99.17"
coolprop-rs = "0.2.0"
roots = "0.0.8"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]